--- a/.tmux.conf
+++ b/.tmux.conf
@@ -121,26 +121,24 @@ set -g status-position "bottom"
 set -g status-left-length "100"
 set -g status-left-style "none"
 set -g status-right-length "100"
-set -g status-right-attr "none"
 set -g status-style "none"
 set -g status-left "#{prefix_highlight}#[fg=colour22,bg=colour148,bold] #S #[fg=colour148,bg=colour236,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour240] %Y-%m-%d %H:%M #[fg=colour252,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour241,bg=colour252] #h "
 
-set -g pane-active-border-fg "colour148"
-set -g pane-border-fg "colour240"
+set -g pane-active-border-style "fg=colour148"
+set -g pane-border-style "fg=colour240"
 
-set -g message-command-style fg "colour231"
-set -g message-style bg "colour240"
-set -g message-style fg "colour231"
-set -g message-command-bg "colour240"
+set -g message-command-style "fg=colour231"
+set -g message-style "bg=colour240,fg=colour231"
+set -g message-command-style "bg=colour240"
 
-setw -g window-status-style fg "colour245"
+setw -g window-status-style "fg=colour245"
 setw -g window-status-style "none"
-setw -g window-status-activity-style bg "colour236"
+setw -g window-status-activity-style "bg=colour236"
 setw -g window-status-activity-style "none"
-setw -g window-status-activity-style fg "colour148"
+setw -g window-status-activity-style "fg=colour148"
 setw -g window-status-separator ""
-setw -g window-status-style bg "colour236"
+setw -g window-status-style "bg=colour236"
 setw -g window-status-format "#[fg=colour245,bg=colour236] #I #[fg=colour245,bg=colour236]#W "
 setw -g window-status-current-format "#[fg=colour236,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour231,bg=colour240] #I #[fg=colour231,bg=colour240]#{?window_zoomed_flag,#[fg=green][],}#W #[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]"
 
@@ -153,41 +151,6 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-
-# The followings are not any kind of setting for Tmux, but crucial to my
-# own productivity. Setting them up is really pain, and I probably going to
-# forget it. So I'm just putting them here again.
-
-######## iTerm + Tmux key integration #########
-# First of all, iTerm can send hex codes for shortcuts you define. So for
-# example you can send a hex code for the shortcut "c-f v" which in my case
-# opens a vertical pane (see setting above). The hex code for this combination
-# is: 0x06 0x76. There are many cases to find it out. One of them is the tool
-# 'xxd'
-
-# If you run "xxd -psd" and hit "c-f v" and then enter and finally c-c to exit
-# , it outputs the following:
-#
-# 	$ xxd -psd
-# 	^Fv
-# 	06760a^C
-#
-# What matters is the sequence  06760a^C where:
-#
-# 	06 -> c-f
-# 	76 -> v
-# 	0a -> return
-#	^C -> c-c
-#
-# From here, we know that 0x06 0x76 corresponds to "c-f v".
-#
-# Finally, inside the iTerm2 Key settings, I'm adding just various shortcuts,
-# such as cmd-j, cmd-left, etc.. , select the option "send hex code" and the
-# enter the hex code which I want to be executed, hence the tmux sequence. So
-# when I press CMD + d in iterm, I send the sequence 0x06 0x76,
-# which tmux inteprets it as opening a new pane. 
-###############################################
 
 ######## Alacritty + Tmux key integration #########
 # First of all, Alacritty can send hex codes for shortcuts you define. So for
