--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,11 +1,16 @@
 {
   "java.home" : "/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home",
-  "coc.preferences.noselect": false,
   "languageserver": {
     "metals": {
       "command": "metals-vim",
       "rootPatterns": ["build.sbt"],
       "filetypes": ["scala", "sbt", "sbt.scala"]
+    },
+    "bash": {
+      "command": "bash-language-server",
+      "args": ["start"],
+      "filetypes": ["sh"],
+      "ignoredRootPaths": ["~"]
     }
   }
 }
