--- a/darwin/kitty.conf
+++ b/darwin/kitty.conf
@@ -1,7 +1,8 @@
 # vim:fileencoding=utf-8
+# macOS-specific Kitty configuration
 
 # BEGIN_KITTY_THEME
-include current-theme.conf
+include ../common/themes/current-theme.conf
 # END_KITTY_THEME
 
 font_family FiraCode Nerd Font
@@ -32,7 +33,7 @@ active_tab_font_style bold
 inactive_tab_font_style normal
 tab_switch_strategy previous
 
-# Keyboard shortcuts
+# macOS Keyboard shortcuts (cmd+)
 map cmd+q quit
 map cmd+n new_os_window
 map cmd+enter new_window
