--- a/darwin/kitty.conf
+++ b/darwin/kitty.conf
@@ -8,7 +8,7 @@ include ../common/themes/current-theme.conf
 font_family FiraCode Nerd Font
 font_size 12.5
 macos_option_as_alt left
-shell_integration enabled
+shell_integration disabled
 
 cursor_shape beam
 cursor_blink_interval 0.6 ease-in-out
