Add Arch Linux desktop configs (SwayFX, Waybar, Kitty)
- SwayFX config with purple theme, rounded corners, and GPU settings
- Waybar with Docker/K8s monitoring modules
- Kitty terminal with FiraCode Nerd Font
- Mako notifications and Rofi launcher
- Updated .gitignore for kubectl and SSH sensitive files
- Added comprehensive README for Arch setup

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,16 @@ __pycache__/
 
 # Cursor generated configuration
 .config/cursor/generated/
+
+# Kubernetes configs with credentials
+**/.kube/config*
+!**/.kube/config.template
+
+# SSH sensitive files
+**/.ssh/id_*
+**/.ssh/*_rsa*
+**/.ssh/*_dsa*
+**/.ssh/*_ecdsa*
+**/.ssh/*_ed25519*
+**/.ssh/known_hosts
+**/.ssh/authorized_keys
