some fixes to make everything work

--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -1,4 +1,5 @@
 # vim:fileencoding=utf-8
+# macOS-specific Kitty configuration
 
 # BEGIN_KITTY_THEME
 include current-theme.conf
@@ -7,7 +8,7 @@ include current-theme.conf
 font_family FiraCode Nerd Font
 font_size 12.5
 macos_option_as_alt left
-shell_integration enabled
+shell_integration disabled
 
 cursor_shape beam
 cursor_blink_interval 0.6 ease-in-out
@@ -32,7 +33,7 @@ active_tab_font_style bold
 inactive_tab_font_style normal
 tab_switch_strategy previous
 
-# Keyboard shortcuts
+# macOS Keyboard shortcuts (cmd+)
 map cmd+q quit
 map cmd+n new_os_window
 map cmd+enter new_window
@@ -45,3 +46,7 @@ map cmd+minus change_font_size all -1.0
 map cmd+0 change_font_size all 0
 map cmd+f toggle_fullscreen
 map cmd+ctrl+l clear_terminal to_cursor_scroll active
+
+# Word navigation with Option+Arrow keys
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
