fzf settings and some kitty stuff

--- a/darwin/kitty.conf
+++ b/darwin/kitty.conf
@@ -2,7 +2,7 @@
 # macOS-specific Kitty configuration
 
 # BEGIN_KITTY_THEME
-include ../common/themes/current-theme.conf
+include current-theme.conf
 # END_KITTY_THEME
 
 font_family FiraCode Nerd Font
@@ -46,3 +46,7 @@ map cmd+minus change_font_size all -1.0
 map cmd+0 change_font_size all 0
 map cmd+f toggle_fullscreen
 map cmd+ctrl+l clear_terminal to_cursor_scroll active
+
+# Word navigation with Option+Arrow keys
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
